--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.5.21",
     "vue-moment": "^4.0.0",
     "vuetify": "^1.3.0",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
